[package]
name = "hexrw"
version = "0.1.0"
description = "A CLI utility to read / write hexadecimal value from / to a file"
authors = ["Philip Ye <yestyle@gmail.com>"]
edition = "2021"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["hex", "hexadecimal"]
repository = "https://github.com/yestyle/hexrw"
homepage = "https://github.com/yestyle/hexrw"
documentation = "https://github.com/yestyle/hexrw"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"

[dependencies]
argh = "0.1.10"
